Fixed sub-nav overflow hidden on desktop

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -77,11 +77,7 @@
             padding-right: 0
             p
                 display: block
-        
-        .top
-            position: relative
-            z-index: 10
-            
+                    
         .nav
             @include menuTransition
             
